# spectral-analysis

./: .nojekyll  LICENSE  README.md  index.html  manual-preview.html  manual.embed.ipynb  manual.out.ipynb  pyproject.toml
manual/: _quarto.yml  manual.qmd
site_libs/bootstrap/: bootstrap.min.css
