[project]
name = "spectral-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "plotly>=5.24.1",
    "polars>=1.8.2",
    "scipy>=1.14.1",
    "statsmodels>=0.14.3",
]
